--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kayden</title>
+<title>旭旭</title>
 <!--Usefull Meta-->
 <meta name="description" content="A slick, customizable CV, Resume or Portfolio template, perfect for photographers, freelancers or designers.">
 <meta name="keywords" content="angus, resume, cv, vCard, portfolio, html template, template, responsive">
