--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <!--Facts Item START-->
               <div class="fact d-flex flex-column align-items-center align-items-md-start">
                 <h3 class="d-inline-block" >山东女子学院</h3>
-                <p class="fs-4 d-inline-block text-center text-md-left">信息系，信息安全与管理专业（没有学到很多东西--小声bb）</p>
+                <p class="fs-4 d-inline-block text-center text-md-left">数科院，计算机科学与技术（没有学到很多东西--小声bb）</p>
               </div>
               <!--Facts Item END--> 
             </div>
