--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <!--Progress Bar END--> 
             <!--Progress Bar START-->
             <div class="mb-4">
-              <label class="mb-3 fs-6">Java 8%</label>
+              <label class="mb-3 fs-6">渗透测试 8%</label>
               <div class="progress">
                 <div class="progress-bar progress-bar-loadAnimation" data-percent="8" style="width: 0%;" role="progressbar" aria-valuenow="8" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
