--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="col-6"> 
               <!--Facts Item START-->
               <div class="fact d-flex flex-column align-items-center align-items-md-start">
-                <h3 class="d-inline-block" >山东女子学院</h3>
+                <h3 class="d-inline-block" >某双非（不好意思说，呜呜）</h3>
                 <p class="fs-4 d-inline-block text-center text-md-left">数科院，计算机科学与技术（没有学到很多东西--小声bb）</p>
               </div>
               <!--Facts Item END--> 
@@ -167,9 +167,9 @@
             <!--Progress Bar END--> 
             <!--Progress Bar START-->
             <div class="mb-4">
-              <label class="mb-3 fs-6">渗透测试 8%</label>
+              <label class="mb-3 fs-6">渗透测试 30%</label>
               <div class="progress">
-                <div class="progress-bar progress-bar-loadAnimation" data-percent="8" style="width: 0%;" role="progressbar" aria-valuenow="8" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-loadAnimation" data-percent="30" style="width: 0%;" role="progressbar" aria-valuenow="8" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             <!--Progress Bar END--> 
