--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <tr>
               
               <td class="w-25 d-none d-sm-table-cell border-0"><span class="fw-light fs-5">大一暑假</span></td>
-              <td class="w-50 d-none d-sm-table-cell border-0"><span class="fw-bold fs-5"> 上海奇安信总部(就是打杂的，端茶倒水)</span></td>
+              <td class="w-50 d-none d-sm-table-cell border-0"><span class="fw-bold fs-5"> 南京360(就是打杂的，端茶倒水)</span></td>
               <td class="w-25 d-none d-sm-table-cell border-0"><span class="fw-normal text-secondary">主要负责帮助在职人员，进行项目完成前的准备工作，和项目完成后的善后工作。在这个岗位，增强了自己的计算机技术水平并且能够妥善处理一些麻烦事情，能够很好地保持同事之间的关系，虽然时间很短，但是收获很多。 </span></td>
             </tr>
           </tbody>
