--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <!--Progress Bar END--> 
             <!--Progress Bar START-->
             <div class="mb-4">
-              <label class="mb-3 fs-6">硬件组装 15%<a href="https://xuxuaiff.github.io/">(还要有益于我的见习，另有网页，。。)</a></label>
+              <label class="mb-3 fs-6">硬件组装 15%<a href="https://xuxubzmm.github.io/xuxuaiff.github.io/">(还要有益于我的见习，另有网页，。。)</a></label>
               <div class="progress">
                 <div class="progress-bar progress-bar-loadAnimation" data-percent="15" style="width: 0%;" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
