--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="offset-md-1 col-md-6 mt-5 mt-md-0">
           <div class="h-100 d-flex align-items-center justify-content-center">
             <div class="about-details">
-              <h2 class="fs-3 fw-bold mb-5">←任家旭（简直巨帅无比有木有）</h2>
+              <h2 class="fs-3 fw-bold mb-5">←任家旭（帅）</h2>
               <p class="text-secondary mb-5">本人性格开朗、稳重、有活力，待人热情、真诚。对新鲜事物的接受能力强，能吃苦耐劳，思维敏捷跳跃，做事缜密。有很强的专业的职业道德，专业基础知识扎实，工作认真负责，主动承担责任，积极与周围工作环境建立良好的工作关系，并具有一定的资源协调能力。与同事，其它部门各极配合，有较强的组织能力、实际动手能力和团体协作精神，能迅速的适应各种环境，并融合其中，并且积极参加各种CTF类的大型比赛并能获得相应的荣誉。</p>
               <!--Social Links START-->
               <ul class="social-links list-inline mb-5">
@@ -148,14 +148,14 @@
               <!--Facts Item START-->
               <div class="fact d-flex flex-column align-items-center align-items-md-start">
                 <h3 class="d-inline-block" >山东某高校（。。都懂。。）</h3>
-                <p class="fs-4 d-inline-block text-center text-md-left">数科院，计算机科学与技术（<-没有学到很多东西--小声bb->）</p>
+                <p class="fs-4 d-inline-block text-center text-md-left">计算机科学与技术（<-没有学到很多东西--小声bb->）</p>
               </div>
               <!--Facts Item END--> 
             </div>
 </div>
         </div>
         <div class="col-md-6">
-          <h2 class="fs-3 mb-5 fw-bold">会点啥（100分满分）</h2>
+          <h2 class="fs-3 mb-5 fw-bold">会点啥呢</h2>
           <div class="skills_container"> 
             <!--Progress Bar START-->
             <div class="mb-4">
@@ -300,8 +300,12 @@
           <div class="accordion-item">
 <div id="accordion1" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faq_accordion">
               <div class="accordion-body text-secondary">
-                <p>国家信息安全水平证书</p>
+                <p>国家信息安全水平证书（中级和高级）</p>
+		      <p>注册信息安全渗透测试工程师证书（CISP-PTE）</p>
                 <p>信息安全工程师证书</p>
+		      <p>网络工程师证书</p>
+		      <p>软著《网络安全恶意流量分析系统》</p>
+		       <p>山东省ACM大学生程序设计竞赛 区域赛铜牌</p>
                 <p>&nbsp;三好学生（嘿嘿）</p>
                 <p>二等奖学金（嘿嘿）&nbsp;</p>
                 <p>。。。。。。。&nbsp;</p>
