--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 		      <p>注册信息安全渗透测试工程师证书（CISP-PTE）</p>
                 <p>信息安全工程师证书</p>
 		      <p>网络工程师证书</p>
-		      <p>软著《网络安全恶意流量分析系统》</p>
+		      <p>专利 一个网络安全恶意流量分析系统</p>
 		       <p>山东省ACM大学生程序设计竞赛 区域赛铜牌</p>
                 <p>&nbsp;三好学生（嘿嘿）</p>
                 <p>二等奖学金（嘿嘿）&nbsp;</p>
