--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="col-6"> 
               <!--Facts Item START-->
               <div class="fact d-flex flex-column align-items-center align-items-md-start">
-                <h3 class="d-inline-block" >山东某高校（。。都懂。。）</h3>
+                <h3 class="d-inline-block" >本科山东某高校（。。都懂。。）</h3>
                 <p class="fs-4 d-inline-block text-center text-md-left">计算机科学与技术（<-没有学到很多东西--小声bb->）</p>
               </div>
               <!--Facts Item END--> 
@@ -167,7 +167,7 @@
             <!--Progress Bar END--> 
             <!--Progress Bar START-->
             <div class="mb-4">
-              <label class="mb-3 fs-6">渗透测试 30%</label>
+              <label class="mb-3 fs-6">渗透测试</label>
               <div class="progress">
                 <div class="progress-bar progress-bar-loadAnimation" data-percent="30" style="width: 0%;" role="progressbar" aria-valuenow="8" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -175,7 +175,7 @@
             <!--Progress Bar END--> 
             <!--Progress Bar START-->
             <div class="mb-4">
-              <label class="mb-3 fs-6">计算机网络 10%</label>
+              <label class="mb-3 fs-6">计算机网络</label>
               <div class="progress">
                 <div class="progress-bar progress-bar-loadAnimation" data-percent="10" style="width: 0%;" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -183,7 +183,7 @@
             <!--Progress Bar END--> 
             <!--Progress Bar START-->
             <div class="mb-4">
-              <label class="mb-3 fs-6">硬件组装 15%<a href="https://xuxubzmm.github.io/xuxuaiff.github.io/">(还要有益于我的见习，另有网页，。。)</a></label>
+              <label class="mb-3 fs-6">硬件组装<a href="https://xuxubzmm.github.io/xuxuaiff.github.io/">(还要有益于我的见习，另有网页，。。)</a></label>
               <div class="progress">
                 <div class="progress-bar progress-bar-loadAnimation" data-percent="15" style="width: 0%;" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
