--- a/index.html
+++ b/index.html
@@ -147,8 +147,12 @@
             <div class="col-6"> 
               <!--Facts Item START-->
               <div class="fact d-flex flex-column align-items-center align-items-md-start">
-                <h3 class="d-inline-block" >本科山东某高校（。。都懂。。）</h3>
+                <h3 class="d-inline-block" >本科 山东师范大学（。。都懂。。）</h3>
                 <p class="fs-4 d-inline-block text-center text-md-left">计算机科学与技术（<-没有学到很多东西--小声bb->）</p>
+              </div>
+		     <div class="fact d-flex flex-column align-items-center align-items-md-start">
+                <h3 class="d-inline-block" >硕士 华南理工大学 </h3>
+                <p class="fs-4 d-inline-block text-center text-md-left">网络安全 </p>
               </div>
               <!--Facts Item END--> 
             </div>
