--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div class="skills_container"> 
             <!--Progress Bar START-->
             <div class="mb-4">
-              <label class="mb-3 fs-6">python&nbsp;10%</label>
+              <label class="mb-3 fs-6">python&nbsp;</label>
               <div class="progress">
                 <div class="progress-bar progress-bar-loadAnimation" data-percent="10" style="width: 0%;" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -245,6 +245,22 @@
 			<h3 class="fs-5 underline_text fw-bold d-inline-block">。。。。。。。。。。。。。。</h3>
           </a> </div>
 		  
+        <!--Masonry Grid Item END--> 
+	              <!--Masonry Grid Item START-->
+        <div class="col-md-6 col-lg-4 grid-item"> <a href="assets/images/portfolio2.jpg" class="portfolio-item portfolio-image underline_animation text-reset">
+          <div class="portfolio-thumbnail"> <img src="assets/images/portfolio2.jpg" class="img-fluid img-grayTransition" alt=""> </div>
+          <div class="portfolio-description my-3">
+            <h3 class="fs-5 underline_text fw-bold d-inline-block">这个是一次散打的比赛给的证书</h3>
+            <span class="d-block fw-light small-font-size">就一般般</span> </div>
+          </a> </div>
+        <!--Masonry Grid Item END--> 
+	              <!--Masonry Grid Item START-->
+        <div class="col-md-6 col-lg-4 grid-item"> <a href="assets/images/portfolio2.jpg" class="portfolio-item portfolio-image underline_animation text-reset">
+          <div class="portfolio-thumbnail"> <img src="assets/images/portfolio2.jpg" class="img-fluid img-grayTransition" alt=""> </div>
+          <div class="portfolio-description my-3">
+            <h3 class="fs-5 underline_text fw-bold d-inline-block">这个是考研初试成绩</h3>
+            <span class="d-block fw-light small-font-size">值得纪念以下哈哈哈</span> </div>
+          </a> </div>
         <!--Masonry Grid Item END--> 
         <!--Masonry Grid Item START-->        <!--Masonry Grid Item END--> 
         <!--Masonry Grid Item START-->        <!--Masonry Grid Item END--> 
