--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 		  
         <!--Masonry Grid Item END--> 
 	              <!--Masonry Grid Item START-->
-        <div class="col-md-6 col-lg-4 grid-item"> <a href="assets/images/portfolio2.jpg" class="portfolio-item portfolio-image underline_animation text-reset">
+        <div class="col-md-6 col-lg-4 grid-item"> <a href="QQ图片20250228164900.jpg" class="portfolio-item portfolio-image underline_animation text-reset">
           <div class="portfolio-thumbnail"> <img src="QQ图片20250228164900.jpg" class="img-fluid img-grayTransition" alt=""> </div>
           <div class="portfolio-description my-3">
             <h3 class="fs-5 underline_text fw-bold d-inline-block">这个是一次散打的比赛给的证书</h3>
@@ -255,7 +255,7 @@
           </a> </div>
         <!--Masonry Grid Item END--> 
 	              <!--Masonry Grid Item START-->
-        <div class="col-md-6 col-lg-4 grid-item"> <a href="assets/images/portfolio2.jpg" class="portfolio-item portfolio-image underline_animation text-reset">
+        <div class="col-md-6 col-lg-4 grid-item"> <a href="QQ图片20250228164906.jpg" class="portfolio-item portfolio-image underline_animation text-reset">
           <div class="portfolio-thumbnail"> <img src="QQ图片20250228164906.jpg" class="img-fluid img-grayTransition" alt=""> </div>
           <div class="portfolio-description my-3">
             <h3 class="fs-5 underline_text fw-bold d-inline-block">这个是考研初试成绩</h3>
