--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <p class="fs-4 d-inline-block text-center text-md-left">计算机科学与技术（<-没有学到很多东西--小声bb->）</p>
               </div>
 		     <div class="fact d-flex flex-column align-items-center align-items-md-start">
-                <h3 class="d-inline-block" >硕士 华南理工大学（考上了，没去读） </h3>
+                <h3 class="d-inline-block" >硕士 华南理工大学 （就那样） </h3>
                 <p class="fs-4 d-inline-block text-center text-md-left"> </p>
               </div>
               <!--Facts Item END--> 
